--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,14 +1,14 @@
 [
   {
-    "title": "Music Near Me",
-    "content": "A mobile app that will send you notifications whenever a concert is playing in your area."
+    "title": "hashflip",
+    "content": "new app that allows  you to waiger crypto"
    },
   {
-    "title": "The Ultimate Tech Quiz",
-    "content": "A web app that will give users 10 new technical questions each day and track their progress in things like programming, cybersecurity, database architecture, and more!"
+    "title": "10g",
+    "content": "the new internet speed normal?"
     },
   {
-    "title": "Roll 'Em Up",
-    "content": "A game for Windows and macOS where players move a ball through a series of increasingly challenging mazes."
+    "title": "A.I",
+    "content": "new models research"
    }
 ]
